# link_shortener

./: docker-compose.yml  pyproject.toml
SmartLink/api/: urls.py
SmartLink/api/shortener/: urls.py
SmartLink/apps/shortener/: models.py  serializers.py  views.py
SmartLink/apps/shortener/migrations/: 0001_initial.py  0002_alter_smarturl_unique_together.py  0003_alter_smarturl_full_url_alter_smarturl_short_url.py
SmartLink/configs/: asgi.py  settings.py  wsgi.py
SmartLink/core/: models.py
