[tool.poetry]
name = "link shortener"
version = "0.1.0"
description = ""
authors = ["iliaman <iliaman1993@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.2"
psycopg2 = "^2.9.9"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
